# Speed-to-lead-Agent

./: .env.example  .gitignore  AGENT_BUILD_PLAYBOOK.md  CLIENT_SETUP_CHECKLIST.md  CUSTOMIZATION_READ.md  END_TO_END_START.md  INFO.md  QUEUE_WORKER.md  README.md  SIMPLIFIED.md  THE_SQL_PRODUCTION.md  TOKEN_BASELINE.md  app.py  config.py  demo_harness.py  failure_notes.md  graph.py  langgraph.json  pyproject.toml  requirements.txt  state.py  what_stays_human.md  worker.py  workflow_nodes.py
.agent/: GOALS.md
.agent/runs/audit-hardening-prd/: GOAL.md  implementation-notes.html
agents/: __init__.py  common.py  crm_recorder.py  followup_writer.py  lead_qualifier.py  missing_info_detector.py  speed_to_lead_chat.py  supervisor.py
channels/: channel_dispatcher.py
channels/telegram_leads/: README.md  adapter.py  sender.py
channels/whatsapp/: README.md  adapter.py  sender.py
evals/: lead_cases.jsonl
mock_data/: agency_profile.json  leads.json  owner_configuration.json  owner_configuration_example.json
prompts/: crm_recorder.md  followup_writer.md  lead_qualifier.md  missing_info_detector.md  speed_to_lead_chat.md  supervisor.md
schemas/: __init__.py  lead.py
templates/_starter_template/: README.md  agency_profile.json  owner_configuration.json  test_scripts.md
tests/: test_airtable_client.py  test_channel_conversation_stop.py  test_channel_crm.py  test_channel_dispatcher.py  test_channel_escalation_suppression.py  test_channel_intake.py  test_channel_owner_actions.py  test_decision_normalizer.py  test_email_transport.py  test_http_client.py  test_lead_tools.py  test_pipeline_graph.py  test_speed_to_lead_message_format_policy.py  test_speed_to_lead_prompt_policy.py  test_telegram_message_formatting.py  test_telegram_webhook.py  test_webhook_payload.py  test_whatsapp_adapter.py  test_workflow_hardening.py
tools/: __init__.py  airtable_client.py  channel_conversations.py  channel_crm.py  channel_intake.py  crm.py  decision_normalizer.py  email.py  http_client.py  inbound_events.py  io_helpers.py  job_queue.py  lead_ingestion.py  lead_storage.py  owner_config.py  telegram.py  workflow_runner.py
(+4 files in other folders)
