[build-system]
requires = ["setuptools==68.0.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "lead-intake-followup-agent"
version = "0.1.0"
description = "Sellable LangGraph StateGraph speed-to-lead MVP for lead intake and follow-up."
requires-python = ">=3.11"
dependencies = [
  "langchain==1.3.1",
  "langchain-aws==1.4.7",
  "langgraph==1.2.0",
  "langgraph-checkpoint-postgres==3.1.0",
  "psycopg[binary]==3.3.4",
  "pydantic==2.13.4",
  "email-validator==2.3.0",
  "python-dotenv==1.2.2",
  "fastapi==0.136.1",
  "uvicorn==0.47.0",
]

[project.optional-dependencies]
dev = [
  "langgraph-cli[inmem]==0.4.26",
  "pytest==9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools]
py-modules = ["app", "config", "graph", "demo_harness", "worker", "state", "workflow_nodes"]

[tool.setuptools.packages.find]
include = ["agents", "agents.*", "schemas", "schemas.*", "tools", "tools.*"]
exclude = ["evals", "mock_data", "outputs", "prompts", "tests"]
